[b][color=orange]v5.07[/color], 10.06.2022[/b][list]
[*]Added shadows on Auras and UnitFrame Auras. Many many thx @DaveA50
[*]Fixed an issue with Tab fonts are not changeable. Because Mera is dumb >.<[/list]